[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TestGutGui.gd" type="Script" id=1]
[ext_resource path="res://addons/gut/GutScene.tscn" type="PackedScene" id=2]

[node name="TestGutGui" type="Node2D"]
script = ExtResource( 1 )

[node name="Gut" parent="." instance=ExtResource( 2 )]

[node name="Controls" type="Panel" parent="."]
margin_left = 790.0
margin_top = 10.0
margin_right = 1010.0
margin_bottom = 400.0

[node name="EndRunMode" type="Button" parent="Controls"]
margin_left = 30.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 60.0
text = "End Run Mode"

[node name="PauseBeforeTeardown" type="Button" parent="Controls"]
margin_left = 30.0
margin_top = 70.0
margin_right = 191.0
margin_bottom = 120.0
text = "Pause Before Teardown"

[node name="Clear Summary" type="Button" parent="Controls"]
margin_left = 30.0
margin_top = 190.0
margin_right = 191.0
margin_bottom = 240.0
text = "Clear Summary"

[node name="Pass" type="Button" parent="Controls"]
margin_left = 110.0
margin_top = 130.0
margin_right = 191.0
margin_bottom = 180.0
text = "Pass"

[node name="Fail" type="Button" parent="Controls"]
margin_left = 30.0
margin_top = 130.0
margin_right = 110.0
margin_bottom = 180.0
text = "Fail"

[connection signal="pressed" from="Controls/EndRunMode" to="." method="_on_EndRunMode_pressed"]
[connection signal="pressed" from="Controls/PauseBeforeTeardown" to="." method="_on_PauseBeforeTeardown_pressed"]
[connection signal="pressed" from="Controls/Clear Summary" to="." method="_on_Clear_Summary_pressed"]
[connection signal="pressed" from="Controls/Pass" to="." method="_on_Pass_pressed"]
[connection signal="pressed" from="Controls/Fail" to="." method="_on_Fail_pressed"]
